# particle_simulation

./: .gitignore  CMakeLists.txt
glad/: CMakeLists.txt
particle_simulation/: CMakeLists.txt
particle_simulation/include/: logger.h  particle_sim.h
particle_simulation/src/: main.c  particle_sim.c
res/shaders/: particle_simulator.frag  particle_simulator.vert
